Added content to a few pages

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#">Countries</a>
+	    <a class="brand" href="#"> Topics </a>
 	    <ul class="nav">
-	      <li class="active"><a href="#">Home</a></li>
+	      <li class="active"><a href="#"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
 	      <li> <a href = "china.html"> China </a> </li>
 	      <li> <a href = "southkorea.html"> South Korea </a> </li>
 	      <li> <a href = "india.html"> India </a> </li>
+	      <li> <a href="conclusion.html"> Conclusion </a></li>
 	    </ul>
 	  </div>
 	</div>
@@ -27,11 +29,22 @@
 	<h1> CS 181W Final Project: The Value of Privacy </h1>
 	<h3> By Ramon Flores, Daniel Liem, Ryan Perez, and John Wu </h3>
 
-	<hr>
+	<br>
 
 	<div>
-		<p> General overview goes here </p>
+		<h2> General Overview </h2>
+
+		<img src="img/logo.jpg" class = "floatRight" id = "logo">
+
+		<p> Privacy is a concept which is in different regards across various cultures and countries. In
+		different locales, expectations of privacy among its residents are very different. In countries where netizens expect government intrusion or surveillance into their online activities, behaviors are altered by those who access sensitive information. </p>
+
+		<p> This project seeks to compare different policies which have been instituted affecting user privacy online, how those policies have cut into the privacy of netizens, and evaluate how effective they have been in achieving their intended purposes. Through this, we hope to shed some light on how governments can create effective policies regarding the internet while holding online privacy in high regards. Specifically, we will examine policies implemented and actions taken by the United States, India, South Korea, and China, and see how intrusions or lower expectations of online privacy have impacted the populations. Each of these countries has a different take on how much privacy is granted to someone connected to the web, and take different steps during surveillance and gathering intelligence (ex. requiring real names online, actively hacking personal email accounts, and handling personally identifiable information). </p>
+
+		<p> Additionally, we will explore the implications of these policies on the citizens of those countries. We will delve more deeply into the perception of the citizens living in these different countries and examine how accurate. Countries such as China suppress the public perception of their stricter policies more so than countries such as the United States do. For example, all political speech in China is suppressed, including complains of privacy breaches by the government whereas rampant opposition to bills such as CISPA has led to the being withdrawn. In the process, we hope to unearth whether these netizens have an accurate perception of the policies affecting them and discover where any discrepancies come from. </p>
 	</div>
+
+	<br>
 
 	<footer> &copy CS181W 2013 </footer>
 </body>
