--- a/us.html
+++ b/us.html
@@ -7,19 +7,21 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#">Countries</a>
+	    <a class="brand" href="#"> Topics </a>
 	    <ul class="nav">
-	      <li><a href="index.html">Home</a></li>
+	      <li> <a href="index.html"> Overview </a> </li>
 	      <li class = "active"> <a href = "#"> United States </a> </li>
 	      <li> <a href = "china.html"> China </a> </li>
 	      <li> <a href = "southkorea.html"> South Korea </a> </li>
 	      <li> <a href = "india.html"> India </a> </li>
+	      <li> <a href="conclusion.html"> Conclusion </a></li>
 	    </ul>
 	  </div>
 	</div>
@@ -27,11 +29,34 @@
 	<h1> CS 181W Final Project: The Value of Privacy </h1>
 	<h3> By Ramon Flores, Daniel Liem, Ryan Perez, and John Wu </h3>
 
-	<hr>
+	<br>
 
 	<div>
-		<p> US policy analysis goes here </p>
+		<h2> Privacy in the United States </h2>
+		
+		<p class = "centered"> Privacy in the United States has been recently characterized by three laws: CISPA, SOPA, and PIPA. </p>
+
+		<h4> <a href = "http://www.pcmag.com/article2/0,2817,2417993,00.asp"> CISPA </a> </h4>
+
+		<ul>
+			<li> <p> CISPA would allow for voluntary infromation sharing between private companies and the government in the event of a cyber attack. </p> </li>
+			<li> <p> If the government detects a cyber attack that might take down Facebook, for example, they could notify those companies. At the same time, Facebook could inform the federal police if they notice unusual activity on their networks that might suggest a cyber attack. </p> </li>
+		</ul>
+
+		<img src="img/sopapipa.jpg" class = "floatRight" id = "sopapipa">
+
+		<br>
+
+		<h4> <a href="http://www.pcworld.com/article/248298/sopa_and_pipa_just_the_facts.html"> SOPA and PIPA </a> </h4>
+
+		<ul>
+			<li> <p> Originally, both bills provided the US Department of Justice the power to seek court orders requiring Internet service provides to block the domain names of infringing sites and the power to allow rights holders to seek court orders requiring payment providers, advertisers, and search engines to stop doing business with an infringing site. </p> </li>
+			<li> <p> Although the House and Senate bills are similar, SOPA is the more extreme of the two. It defines a "foreign infringing site" as any site that is "committing or facilitating" copyright infringement, whereas PIPA is limited to sites with "no significant use other than" copyright infringement.  </p> </li>
+		</ul>
+
 	</div>
+
+	<br><br>
 
 	<footer> &copy CS181W 2013 </footer>
 </body>
