--- a/china.html
+++ b/china.html
@@ -7,19 +7,21 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#">Countries</a>
+	    <a class="brand" href="#"> Topics </a>
 	    <ul class="nav">
-	      <li><a href="index.html">Home</a></li>
+	      <li><a href="index.html"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
 	      <li class = "active"> <a href = "#"> China </a> </li>
 	      <li> <a href = "southkorea.html"> South Korea </a> </li>
 	      <li> <a href = "india.html"> India </a> </li>
+	      <li> <a href="conclusion.html"> Conclusion </a></li>
 	    </ul>
 	  </div>
 	</div>
@@ -27,7 +29,7 @@
 	<h1> CS 181W Final Project: The Value of Privacy </h1>
 	<h3> By Ramon Flores, Daniel Liem, Ryan Perez, and John Wu </h3>
 
-	<hr>
+	<br>
 
 	<div>
 		<p> China policy analysis goes here </p>
