--- a/china.html
+++ b/china.html
@@ -7,14 +7,14 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#"> Topics </a>
+	    <a class="brand" href="index.html"> Topics </a>
 	    <ul class="nav">
 	      <li><a href="index.html"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
@@ -32,8 +32,101 @@
 	<br>
 
 	<div>
-		<p> China policy analysis goes here </p>
+		<h2> Privacy in China </h2>
+		
+		<p class = "centered"> China has an unclear patchwork quilt of different laws regarding online privacy, leading judges to interpret these laws in a wide range of differing rulings </p>
+
+		<br>
+
+		<img src="img/chinaFirewall.jpg" class = "floatRight">
+
+		<h4> <a href="#"> Privacy not mentioned in the Constitution </a> </h4>
+
+		<ul>
+			<li> <p> <span class = "bold"> Article 38: </span> The personal dignity of citizens of the People's Republic of China is inviolable. Insult, libel, false accusation or false incrimination directed against citizens by any means is prohibited. </p> </li>
+		</ul>
+
+		<br>
+
+		<h4> <a href = "http://www.hunton.com/files/News/4bfa5361-4d8f-4c7e-af03-75055a82202c/Presentation/NewsAttachment/7d2612ba-40d6-4884-83de-c01965341d41/new_chinese_tort_liability_law.pdf" target = "_blank"> China Tort Liability Law (Article 2) </a> </h4>
+
+		<ul>
+			<li> <p> Clearly defined that private citizens have a right to sue tortfeasers for data breaches </p> </li>
+			<li> <p> Right to privacy included in list of protected “civil rights and interests” </p> </li>
+			<li> <p> The law establishes the right of an injured party to proceed against an Internet service provider (“ISP”) that uses the Internet to infringe upon the civil rights and interests of another person, or that is aware that users are utilizing the ISP network to commit a tort and yet fails to take necessary measures (such as deletion, <span class = "bold">screening </span> or disconnection) or fails to take necessary measures after receiving notice from an injured party and by this failure enlarges the damages (at Article 36) </p> </li>
+		</ul>
+
+		<br>
+
+		<h4> <a href = "#"> Administrative Measures on Internet Information Services </a> </h4>
+
+		<ul>
+			<li> <p> <span class = "bold"> Article 14: </span> Internet information service providers that engage in news, publishing and electronic notice services, etc., shall record the contents of information distributed and the time distributed, as well as Internet addresses or domain names. Internet access service providers shall record user online time, user account numbers, Internet addresses or domain names and the principal telephone numbers of Internet users. Such records of Internet information service providers and Internet access service providers shall be kept for 60 days and shall be made available when relevant State authorities make inquiries in accordance with law. </p> </li>
+			<li> <p> ISPs must hold on to information showing what users access certain types of website, and must be turned over to state departments upon request - could be used for political purposes </p> </li>
+		</ul>
+
+		<br>
+
+		<h4> <a href="#"> Administrative Provisions on Internet Electronic Messaging Services </a> </h4>
+
+		<ul>
+			<li> <p> <span class = "bold"> Article 12: </span> An electronic bulletin service provider shall protect the confidentiality of the Internet users' information and shall not divulge it to others without the consent of the Internet users, except in cases where the laws stipulate otherwise </p> </li>
+			<li> <p> <span class = "bold"> Article 14: </span> Electronic bulletin service providers shall record the contents and time of the information released on the electronic bulletin service system,, as well as the Internet addresses or domain names. Such records shall be kept for 60 days and shall be made available upon inquiry from the relevant state authorities in accordance with the law. </p> </li>
+			<li> <p> <span class = "bold"> Article 15: </span> Internet access service providers shall record the online accession time of the Internet user, user account numbers, Internet addresses, or domain names and the principal telephone numbers of the Internet users. Such records shall be kept for 60 days and shall be made available if inquiries are made by state authorities in accordance with the law. </p> </li>
+		</ul>
+
+		<br>
+
+		<h4> <a href="#"> Administration Rules </a> </h4>
+
+		<ul>
+			<li> <p> “The communication freedom and communication privacy of the user [of computer information networks] are subject to legal protection. No entity or individual may use the Internet in a way that violates the law to harm communication freedom and communication privacy.” </p> </li>
+		</ul>
+
+		<br>
+
+		<h4> <a href="http://www.jonesday.com/traps_for_unwary/" target = "_blank"> Law on Guarding State Secrets </a> </h4>
+
+		<ul>
+			<li> <p> Unfortunately, the state secrets law is as vague as it is broad. It provides that state secrets are "ematters that have a vital bearing on state security and national interests and, as determined according to statutory procedures, are known by people within a certain scope for a given period of tim." While the law does identify seven categories of secret matters for which protection is mandated (and which are themselves open to interpretation), it also includes a broad, catch-all category covering "other secret matters of the state which shall be kept confidential as determined by state departments for the maintenance of secrets." Past prosecutions demonstrate that Chinese enforcement authorities have almost unlimited discretion to define what information may constitute a state secret </p> </li>
+		</ul>
+
+		<img src="img/chinaFirewall2.jpg" class = "floatRight">
+
+		<h4> <a href="#"> Public Perception of Laws </a> </h4>
+
+		<ul>
+			<li> <p> In theory, laws protect people’s privacy online, but in practice, those protections are ignored </p> </li>
+			<li> <p> Chinese citizens are aware that the government will often review their communications, they value their privacy just as much as westerners </p> </li>
+			<li> <p> Email hacking </p> </li>
+			<ul>
+				<li> <p> Chinese activists’ Google <a href = "http://www.nytimes.com/2010/03/31/world/asia/31china.html?_r=0" target = "_blank"> emails hacked in 2010 </a> by attack originating in China </p> </li>
+				<li> <p> <a href="http://www.guardian.co.uk/technology/2011/mar/20/google-gmail" target = "_blank"> Google accuses government </a> of interfering with Gmail in 2011 </p> </li>
+			</ul>
+			<li> <p> Human Flesh Search </p> </li>
+			<ul>
+				<li> <p> Wang Fei sues ISP + blog writer for disclosing private information and wins </p> </li>
+				<ul>
+					<li> <p> In its decision, <a href="https://www.privacyinternational.org/reports/china/i-legal-framework" target = "_blank"> the court explained </a> that privacy referred generally to a person's private interest and personal relations, including one's personal life, personal information, personal space, secrets, and any aspect of life that an individual would not like to share with the world. Hence, any unauthorised disclosure or dissemination constitutes a violation of a person's privacy interests </p> </li>
+				</ul>
+				<li> <p> A survey by the China Youth Daily last week showed that 79.9 percent of the 2,491 netizens polled believed that Renrou search should be regulated, 65.5 percent thought it might become a new way of venting anger and revenge, 64.6 percent said it infringing privacy, and 20.1 percent feared that they would become a target </p> </li>
+			</ul>
+			<li> <p> 2008 Olympics </p> </li>
+				<ul>
+					<li> <p> <a href = "http://epic.org/privacy/olympic/" target = "_blank"> Chinese Public Security Bureau </a> </p> </li>
+					<ul>
+						<li> <p> invasive snooping equipment installed </p> </li>
+						<li> <p> hotels directed to intercept and record internet activity of all guests </p> </li>
+					</ul>	
+				</ul>
+			<li> <p> Global Perspective </p> </li>
+			<ul>
+				<li> <p> Head of American U.S. Pacific Command, Adm. Timothy Keating: Leave electronic devices behind. “It is our opinion that the Chinese have the capability to penetrate our electronic systems.” </p> </li>
+			</ul>
+		</ul>
 	</div>
+
+	<br>
 
 	<footer> &copy CS181W 2013 </footer>
 </body>
