--- a/india.html
+++ b/india.html
@@ -7,14 +7,14 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#"> Topics </a>
+	    <a class="brand" href="index.html"> Topics </a>
 	    <ul class="nav">
 	      <li><a href="index.html"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
@@ -32,8 +32,104 @@
 	<br>
 
 	<div>
-		<p> India policy analysis goes here </p>
+		<h2> Privacy in India </h2>
+		
+		<p class = "centered"> Indians value their privacy and are well-educated on internet dangers </p>
+
+		<br>
+
+		<img src="img/indiakeyboard.jpg" class = "floatRight">
+
+		<h4> <a href="http://cis-india.org/internet-governance/telecommunications-internet-privacy.pdf" target = "_blank"> Privacy Laws </a> </h4>
+
+		<ul>
+			<li> <p> Information Technology Act 2000 (Amended 2008) </p> </li>
+			<li> <p> Mandatory Privacy Policy </p> </li>
+			<ul>
+				<li> <p> Body corporates must provide a privacy policy to all 'providers of information' </p> </li>
+				<li> <p> The privacy policy must define the organizations’ practices and policies, clarify the types of sensitive personal information that will be collected, state the purpose and usage of collected information, note the circumstances under which information can be disclosed without consent, and describe the security practices and procedures that have been put in place to protect the information. </p> </li>
+			</ul>
+			<li> <p> Consent </p> </li>
+			<ul>
+				<li> <p> Body corporates must obtain consent in letter, Fax, or email from the 'provider of information' before collecting, using or disclosing any sensitive personal information. </p> </li>
+			</ul>
+			<li> <p> Collection of Information </p> </li>
+			<ul>
+				<li> <p> Body corporates may only collect sensitive personal information for lawful and necessary purposes </p> </li>
+				<li> <p> While collecting information, body corporates must ensure that the individual is informed of: </p> </li>
+				<ul>
+					<li> <p> the fact that information is being collected </p> </li>
+					<li> <p> the purpose for which the information is being collected </p> </li>
+					<li> <p> the intended recipients of the information </p> </li>
+					<li> <p> the name and address of the agency collecting the information </p> </li>
+				</ul>
+			</ul>
+			<li> <p> Use of Information </p> </li>
+			<ul>
+				<li> <p> Body corporates must use information only for stated and agreed to purposes. </p> </li>
+			</ul>
+			<li> <p> Opt-In and Opt-Out Options </p> </li>
+			<ul>
+				<li> <p> Individuals are provided with the option to opt-in or opt-out of services prior to the collection of sensitive personal information. </p> </li>
+			</ul>
+			<li> <p> Access, Review, and Connection </p> </li>
+			<ul>
+				<li> <p> Individuals are allowed to review, update, and correct any sensitive personal information that they have provided “wherever necessary.” </p> </li>
+			</ul>
+			<li> <p> Data Retention </p> </li>
+			<ul>
+				<li> <p> Body corporates are allowed to retain sensitive personal information only as long as is lawfully necessary. </p> </li>
+			</ul>
+			<li> <p> Lawful Disclosure </p> </li>
+			<ul>
+				<li> <p> Before a body corporate is allowed to disclose or publish sensitive personal information to a third party, consent must be obtained from the individual whom the information belongs. </p> </li>
+			</ul>
+			<li> <p> Reactive Disclosure </p> </li>
+			<ul>
+				<li> <p> An exception to the above protection is in the case of requests from governmental agencies. </p> </li>
+			</ul>
+			<li> <p> Lawful Transfer of Information </p> </li>
+			<ul>
+				<li> <p> Body corporates, or anyone acting on their behalf may only transfer sensitive personal information to international organisations that ensure the same level of protection over the data. </p> </li>
+			</ul>
+			<li> <p> Information Security </p> </li>
+			<ul>
+				<li> <p> Body corporates must implement security practices and standards which require </p> </li>
+				<ul>
+					<li> <p> a comprehensively documented information security program </p> </li>
+					<li> <p> information security policies must contain managerial, technical, operational and physical security control measures that are commensurate with the information assets being protected. </p> </li>
+				</ul>s
+			</ul>
+			<li> <p> Penalties and Remedy </p> </li>
+			<ul>
+				<li> <p> Non-observance of the data protection rules and general negligence with respect to personal data attracts civil liability. </p> </li>
+			</ul>
+		</ul>
+
+		<img src="img/indiastats.jpeg" class = "floatRight" id = "indiaStats">
+
+		<h4> <a href="http://precog.iiitd.edu.in/research/privacyindia/PI_2012_Complete_Report.pdf" target = "_blank"> Public Perception of Laws </a> </h4>
+
+		<ul>
+			<li> <p> Study (survey, interviews, focus groups) conducted on 10,372 Indians about privacy concerns </p> </li>
+			<li> <p> Participants showed more concerns about privacy through mobile phones, and Internet than other forms of privacy issues (physical, territorial, workplace, etc.) </p> </li>
+			<li> <p> Majority of the participants felt comfortable with the protection provided by the mobile service providers. </p> </li>
+			<li> <p> About 40% of the participants would never save / share personal information in / through emails. Privacy seems to be the primary reason for this behavior. </p> </li>
+			<li> <p> Majority of the participants felt pictures to be the most privacy invasive data on the social networks. </p> </li>
+			<li> <p> About 5% of the survey participants tend to accept friend requests from strangers or people whom they don’t know, but just have common friends. </p> </li>
+			<li> <p> Trust in the government has reduced from 2004. </p> </li>
+			<li> <p> A majority of participants felt that mobile phones can be privacy invasive and that websites can hinder privacy by collecting personal information </p> </li>
+			<li> <p> Most participants were not comfortable sharing financially related information (credit card information, household income, etc.) but seemed responsive to sharing personal information </p> </li>
+			<li> <p> 63% of participants felt mobile service provides give sufficient protection services </p> </li>
+			<li> <p> A majority of participants were not comfortable with sharing these aspects of their personal life on any website </p> </li>
+			<ul>
+				<li> <p> Income, bank account details, credit card number, medical history, passwords, passport information, personal income </p> </li>
+			</ul>
+			<li> <p> A majority of participants have removed cookies from the internet at one point in time </p> </li>
+		</ul>
 	</div>
+
+	<br>
 
 	<footer> &copy CS181W 2013 </footer>
 </body>
