--- a/southkorea.html
+++ b/southkorea.html
@@ -7,14 +7,14 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#"> Topics </a>
+	    <a class="brand" href="index.html"> Topics </a>
 	    <ul class="nav">
 	      <li><a href="index.html"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
@@ -32,8 +32,50 @@
 	<br>
 
 	<div>
-		<p> South Korea policy analysis goes here </p>
+		<h2> Privacy in South Korea </h2>
+		
+		<p class = "centered"> The government has full access and is constantly regulating the internet, and the people are content and compliant </p>
+
+		<br>
+
+		<img src="img/koreainternet.jpg" class = "floatRight">
+
+		<h4> <a href="https://www.privacyinternational.org/reports/south-korea/i-legal-framework" target = "_blank"> Privacy Laws </a> </h4>
+
+		<ul>
+			<li> <p> “In 2010, <a href="https://opennet.net/research/profiles/south-korea#footnote102_ql8ydbt" target = "_blank"> Facebook faced scrutiny </a> from the KCC, which found that “Facebook violates the regulations on protection of privacy in information networks.”102 The KCC required Facebook to submit related documents and make improvements in line with the nation’s Information and Communication Law—specifically Article 22 of the Act on Promotion of Information and Communication Network Utilization and Information Protection.” </p> </li>
+			<li> <p> “South Korea has adopted a data protection regime similar to the United States and Japan, with one act covering the public sector and sectoral legislation for the private sector.” </p> </li>
+			<li> <p> The Korea Association of Information and Telecommunication (KAIT) has instituted a privacy trust mark for websites and other online businesses that satisfy appropriate data processing standards. </p> </li>
+			<li> <p> “In May 2005, the People's Solidarity for Participatory Democracy reported, based on a survey of 15 Internet portals, that most Korean Internet portals still require customers to provide a large amount of personal information, even their resident registration numbers … without clarifying how the personal data will be used and without obtaining their individual consent.” </p> </li>
+			<ul>
+				<li> <p> this includes a 13-digit system whereby an individual's age, gender, place of birth and other private data, are stored and tracked by the government </p> </li>
+				<ul>
+					<li> <p> <a href="https://opennet.net/research/profiles/south-korea#footnote96_s4c6owb" target = "_blank">This policy was tightened further </a> by the MIC in July 2007 when users were required to register their real names and resident identification numbers with Web sites before posting comments or uploading video or audio clips on bulletin boards. </p> </li>
+					<li> <p> In December 2008, <a href = "https://opennet.net/research/profiles/south-korea#footnote97_gr6trfs" target = "_blank"> the KCC extended its reach </a> to require all forum and chat room users to make verifiable real-name registrations. </p> </li>
+					<li> <p> Furthermore, an April 2009 amendment to the Information Act took effect, requiring Korea-domain Web sites with at least 100,000 visitors daily to confirm personal identities through real names and resident registration numbers </p> </li>
+					<li> <p> In 2004, <a href="https://opennet.net/research/profiles/south-korea#footnote94_zfwzqja" target = "_blank">election laws began requiring individuals </a> who post comments on Web sites and message boards in support of, or in opposition to, a candidate to disclose their real names. </p> </li>
+					<li> <p> In 2005 the government implemented a rule that required e-mail or chat-service account holders to provide detailed information, including name, address, profession, and identification numbers </p> </li>
+				</ul>
+				<li> <p> This shows how much the government is regulating the people’s lives, where privacy to the government is barely a concern at this point. </p> </li>
+			</ul>
+		</ul>
+
+		<br>
+
+		<h4> <a href="#"> Public Perception of Laws </a> </h4>
+
+		<ul>
+			<li> <p> “Using the law might work to some degree, but it will be more effective if people learn to control themselves,” said Seong Dong-jin of the Korea Internet Corporation Association. </p> </li>
+			<ul>
+				<li> <p> meaning several arms of the government believes in the people to correct themselves rather than the law – shows reliance on the public </p> </li>
+			</ul>
+			<li> <p> Majority felt safe because for the most part the internet was regulated by the government </p> </li>
+			<li> <p> People are okay with the internet regulations by the government </p> </li>
+			<li> <p> Without people’s unanimous cooperation, the government wouldn’t be able to regulate like how they’re doing now </p> </li>
+		</ul>
 	</div>
+
+	<br>
 
 	<footer> &copy CS181W 2013 </footer>
 </body>
