--- a/us.html
+++ b/us.html
@@ -7,14 +7,14 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#"> Topics </a>
+	    <a class="brand" href="index.html"> Topics </a>
 	    <ul class="nav">
 	      <li> <a href="index.html"> Overview </a> </li>
 	      <li class = "active"> <a href = "#"> United States </a> </li>
@@ -34,24 +34,55 @@
 	<div>
 		<h2> Privacy in the United States </h2>
 		
-		<p class = "centered"> Privacy in the United States has been recently characterized by three laws: CISPA, SOPA, and PIPA. </p>
+		<p class = "centered"> Privacy in the United States has been recently characterized by three laws: CISPA, SOPA, and PIPA </p>
 
-		<h4> <a href = "http://www.pcmag.com/article2/0,2817,2417993,00.asp"> CISPA </a> </h4>
+		<h4> <a href = "http://www.pcmag.com/article2/0,2817,2417993,00.asp" target = "_blank"> CISPA </a> </h4>
 
 		<ul>
-			<li> <p> CISPA would allow for voluntary infromation sharing between private companies and the government in the event of a cyber attack. </p> </li>
-			<li> <p> If the government detects a cyber attack that might take down Facebook, for example, they could notify those companies. At the same time, Facebook could inform the federal police if they notice unusual activity on their networks that might suggest a cyber attack. </p> </li>
+			<li> <p> CISPA would allow for voluntary infromation sharing between private companies and the government in the event of a cyber attack </p> </li>
+			<li> <p> If the government detects a cyber attack that might take down Facebook, for example, they could notify those companies. At the same time, Facebook could inform the federal police if they notice unusual activity on their networks that might suggest a cyber attack </p> </li>
+			<li> <p> Backers argue that CISPA is necessary to protect the U.S. against cyber attacks <a href = "http://www.pcmag.com/article2/0,2817,2415413,00.asp" target = "_blank"> from countries like China and Iran.</a> But opponents said that it would allow companies to easily hand over users' private information to the government thanks to a liability clause. This, according to the <a href = "https://www.eff.org/cybersecurity-bill-faq#company" target = "_blank"> Electronic Frontier Foundation,</a> "essentially means CISPA would override the relevant provisions in all other laws—including privacy laws" </p> </li>
+			<li> <p> According to the EFF, "CISPA is written broadly enough to permit your communications service providers to share your emails and text messages with the government, or your cloud storage company could share your stored files" </p> </li>
 		</ul>
 
 		<img src="img/sopapipa.jpg" class = "floatRight" id = "sopapipa">
 
 		<br>
 
-		<h4> <a href="http://www.pcworld.com/article/248298/sopa_and_pipa_just_the_facts.html"> SOPA and PIPA </a> </h4>
+		<h4> <a href="http://www.pcworld.com/article/248298/sopa_and_pipa_just_the_facts.html" target = "_blank"> SOPA and PIPA </a> </h4>
 
 		<ul>
 			<li> <p> Originally, both bills provided the US Department of Justice the power to seek court orders requiring Internet service provides to block the domain names of infringing sites and the power to allow rights holders to seek court orders requiring payment providers, advertisers, and search engines to stop doing business with an infringing site. </p> </li>
-			<li> <p> Although the House and Senate bills are similar, SOPA is the more extreme of the two. It defines a "foreign infringing site" as any site that is "committing or facilitating" copyright infringement, whereas PIPA is limited to sites with "no significant use other than" copyright infringement.  </p> </li>
+			<li> <p> Although the House and Senate bills are similar, SOPA is the more extreme of the two. It defines a "foreign infringing site" as any site that is "committing or facilitating" copyright infringement, whereas PIPA is limited to sites with "no significant use other than" copyright infringement </p> </li>
+			<li> <p> Comcast could prevent its customers from accessing thepiratebay.org, although the underlying IP address would still be reachable </p> </li>
+			<li> <p> Rights holders would be able to request that funding be cut off from an infringing site, and that search links to that site be removed. The site in question would have five days to appeal any action taken </p> </li>
+
+		</ul>
+
+		<br>
+
+		<img src="img/sopaprotest.jpg" class = "floatRight">
+
+		<h4> <a href="#"> Public Perception of Laws </a> </h4>
+
+		<ul>
+			<li> <p> CISPA </p> </li>
+			<ul>
+				<li> <p> CISPA Supporters </p> </li>
+				<ul>
+					<li> <p> Supporters of CISPA have generally been those in tech companies, the financial sector, Republicans, and the United States Chamber of Commerce </p> </li>
+				</ul>	
+				<li> <p> CISPA Opponents </p> </li>
+				<ul>
+					<li> <p> Opponents of CISPA have generally been President Obama, The Electric Frontier Foundation, and the American Civil Liberties Union </p> </li>
+				</ul>
+			</ul>	
+
+			<li> <p> SOPA and PIPA </p> </li>
+			<ul>
+				<li> <p> As for outside parties, the <a href = "http://judiciary.house.gov/issues/Rogue%20Websites/List%20of%20SOPA%20Supporters.pdf" target = "_blank"> list of SOPA supporters </a> consists mostly of media companies, including record labels, TV networks, movie studios, and book publishers. Some companies with an interest in fighting sales of other counterfeit goods, such as beauty-product maker Revlon and pharmaceutical company Pfizer, also appear on the list. </p> </li>
+				<li> <p> Opposition to SOPA and PIPA is strong in the tech sector. An <a href = "http://www.scribd.com/doc/75746065/Open-Letter-to-Washington-SOPA-and-PIPA" target = "_blank"> open letter to Washington </a> speaking out against the legislation was signed by founders of Craigslist, eBay, Google, Mozilla, Twitter, and Wikipedia, among others. </p> </li>
+			</ul>
 		</ul>
 
 	</div>
