--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<title> CS 181W Final Project </title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
 	<div class="navbar">
 	  <div class="navbar-inner">
-	    <a class="brand" href="#"> Topics </a>
+	    <a class="brand" href="index.html"> Topics </a>
 	    <ul class="nav">
 	      <li class="active"><a href="#"> Overview </a></li>
 	      <li> <a href = "us.html"> United States </a> </li>
